--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -1,12 +1,46 @@
 /*  ============= WEB BROWSER RESETS ============ */
-* { margin: 0; padding: 0; border: none }
-*, *::before, *::after { box-sizing: border-box }
-html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
-scroll-behavior: smooth; scroll-padding-top: 20px }
-body { line-height: 1.5; min-height: 100vh }
-img { width: 100%; height: auto }
-@media (max-width: 767px ) { body { text-rendering: optimizeSpeed } }
-@media (min-width: 768px ) { body { text-rendering: optimizeLegibility } }
+* {
+    margin: 0;
+    padding: 0;
+    border: none
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box
+}
+
+html {
+    height: 100%;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    scroll-behavior: smooth;
+    scroll-padding-top: 20px
+}
+
+body {
+    line-height: 1.5;
+    min-height: 100vh
+}
+
+img {
+    width: 100%;
+    height: auto
+}
+
+@media (max-width: 767px) {
+    body {
+        text-rendering: optimizeSpeed
+    }
+}
+
+@media (min-width: 768px) {
+    body {
+        text-rendering: optimizeLegibility
+    }
+}
 
 
 /* ============ CUSTOM PROPERTIES ============  */
@@ -16,10 +50,10 @@ img { width: 100%; height: auto }
     /* Alternatives to default sans-serif font */
     --font-sans: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Fira Sans, Ubuntu, Oxygen, Oxygen Sans, Cantarell, Droid Sans, Apple Color Emoji, Segoe UI Emoji, Segoe UI Emoji, Segoe UI Symbol, Lucida Grande, Helvetica, Arial, sans-serif;
 
-     /* Alternatives to default serif font */
+    /* Alternatives to default serif font */
     --font-serif: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
 
-     /* Alternatives to default monospace font */
+    /* Alternatives to default monospace font */
     --font-monospace: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
     /* Fluid font size scale */
@@ -34,26 +68,42 @@ img { width: 100%; height: auto }
 
 /*  ============== LAYOUT FOR CONTENT CONTAINERS ================= */
 
-nav, header, section, footer { position: relative; display: block }
-header, section, footer { margin-left: auto; margin-right: auto; overflow: hidden }
+nav,
+header,
+section,
+footer {
+    position: relative;
+    display: block
+}
+
+header,
+section,
+footer {
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden
+}
+
 /* Under last content item, zero the bottom margin */
-section > *:last-child { margin-bottom: 0 !important }
+section>*:last-child {
+    margin-bottom: 0 !important
+}
 
 /*  ====================== HEADER ======================== */
-         
+
 /* Padding around content: laptops / desktops  */
 @media (min-width: 768px) {
-    header { 
-        padding-top: 1%; 
+    header {
+        padding-top: 1%;
         padding-right: 20%;
         padding-bottom: 0%;
         padding-left: 20%
     }
 }
-                        
+
 /* Padding around content: mobiles */
 @media (max-width: 767px) {
-    header { 
+    header {
         padding-top: 5%;
         padding-right: 5%;
         padding-bottom: 0%;
@@ -66,50 +116,66 @@ section > *:last-child { margin-bottom: 0 !important }
 
 /* Padding around content: laptops / desktops  */
 @media (min-width: 768px) {
-    section { 
+    section {
         padding-top: 4%;
         padding-right: 20%;
         padding-bottom: 4%;
         padding-left: 20%
     }
 }
-                        
+
 /* Padding around content: mobiles */
 @media (max-width: 767px) {
-    section { 
+    section {
         padding-left: 5%;
         padding-right: 5%;
         padding-bottom: 5%;
-        padding-left: 5% 
+        padding-left: 5%
     }
 }
 
 /* Maximum width of any section */
-section { max-width: 1920px }
+section {
+    max-width: 1920px
+}
+
 /* Maximum width for contents of any section */
-section > * { max-width: 1600px }
+section>* {
+    max-width: 1600px
+}
 
 /* When content width < viewport width, equalise spacing at left and right */
-section > * { max-width: 1600px; margin-left: auto; margin-right: auto }
+section>* {
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto
+}
 
 /* ============= TYPOGRAPHY ============ */
 
 h1 {
-    font-size: var(--fs-xxxl);
+    font-size: calc(var(--fs-xxxl) * 1.4);
     margin-top: 32px;
     line-height: 1.2;
+    font-family: var(--font-serif);
+    font-weight: normal;
+    text-align: center;
+    letter-spacing: -3px;
 }
 
 h2 {
     font-size: var(--fs-xl);
     line-height: 1.2;
-    margin-top: 48px; 
+    margin-top: 48px;
     margin-bottom: 6px;
+    font-family: var(--font-serif);
+    letter-spacing: -1px;
+    text-transform: uppercase;
 }
 
 p {
-	font-size: var(--fs-base);
+    font-size: var(--fs-base);
     line-height: 1.7;
-	margin-bottom: 12px;
+    margin-bottom: 12px;
+    font-family: var(--font-serif);
 }
-
