--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -152,6 +152,9 @@ section>* {
 }
 
 /* ============= TYPOGRAPHY ============ */
+body {
+    background-color: #7d3c98;
+}
 
 h1 {
     font-size: calc(var(--fs-xxxl) * 1.4);
@@ -161,6 +164,7 @@ h1 {
     font-weight: normal;
     text-align: center;
     letter-spacing: -3px;
+    color: white;
 }
 
 h2 {
@@ -171,6 +175,7 @@ h2 {
     font-family: var(--font-serif);
     letter-spacing: -1px;
     text-transform: uppercase;
+    color: white;
 }
 
 p {
@@ -178,4 +183,8 @@ p {
     line-height: 1.7;
     margin-bottom: 12px;
     font-family: var(--font-serif);
+}
+
+a {
+    color: white;
 }
