--- a/exercises/assets/css/style-1.css
+++ b/exercises/assets/css/style-1.css
@@ -152,6 +152,9 @@ section>* {
 }
 
 /* ============= TYPOGRAPHY ============ */
+body {
+    background-color: antiquewhite;
+}
 
 h1 {
     font-size: calc(var(--fs-xxxl) * 1.3);
@@ -160,6 +163,7 @@ h1 {
     font-weight: normal;
     text-align: center;
     letter-spacing: -3px;
+    color: brown;
 }
 
 h2 {
@@ -169,6 +173,7 @@ h2 {
     margin-bottom: 16px;
     font-family: var(--font-serif);
     letter-spacing: -1px;
+    color: brown;
 }
 
 h3 {
@@ -177,6 +182,7 @@ h3 {
     margin-bottom: 4px;
     line-height: 1.2;
     font-family: var(--font-serif);
+    color: brown;
 }
 
 p {
@@ -184,4 +190,8 @@ p {
     line-height: 1.7;
     margin-bottom: 12px;
     font-family: var(--font-serif);
+}
+
+a {
+    color: brown;
 }
