--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -414,3 +414,22 @@ p {
 img {
     margin-bottom: 24px;
 }
+
+/* ======== HYPERLINKS ======== */
+a:link,
+a:visited {
+    color: var(--green-800);
+    transition: all 0.3s ease;
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--green-800);
+    text-underline-offset: 6px;
+}
+
+a:hover,
+a:focus,
+a:active {
+    color: var(--rose-600);
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--rose-600);
+    text-underline-offset: 6px;
+}
