--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -373,14 +373,16 @@ h1 {
     line-height: 1.1;
     margin-bottom: 30px;
     text-align: center;
-    letter-spacing: -2px
+    letter-spacing: -1px;
+    font-family: "Oswald", sans-serif;
 }
 
 header p {
     font-size: var(--fs-md);
     color: var(--green-900);
     text-align: center;
-    font-weight: bold
+    font-weight: bold;
+    font-family: "Lato", sans-serif;
 }
 
 /* Small headings */
@@ -390,6 +392,7 @@ h2 {
     line-height: 1.2;
     margin-top: 42px;
     margin-bottom: 14px;
+    font-family: "Oswald", sans-serif;
 }
 
 section h2:nth-child(1) {
@@ -402,6 +405,7 @@ p {
     color: #000;
     line-height: 1.6;
     margin-bottom: 20px;
+    font-family: "Lato", sans-serif;
 }
 
 .highlight-text {
