--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -26,9 +26,8 @@ body {
 }
 
 img {
-    width: 100%;
-    height: auto;
-    display: block
+    margin-bottom: 24px;
+    border-radius: 25px;
 }
 
 input,
