--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -1,3 +1,5 @@
+/*  Mozaniel Clementino dos Santos (Student ID: 76266) */
+
 /*  ============= WEB BROWSER RESETS ============ */
 * {
     margin: 0;
